--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "gha-node",
   "main": "index.js",
   "scripts": {
-    "test": "vitest",
-    "lint": "eslint"
+    "test": "vitest --run",
+    "lint": "eslint ."  
   },
   "repository": {
     "type": "git",
@@ -20,9 +20,7 @@
   },
   "homepage": "https://github.com/GonzaloROD/gha-node#readme",
   "devDependencies": {
-    "@eslint/js": "^9.39.0",
-    "eslint": "^9.39.0",
-    "globals": "^16.5.0",
-    "vitest": "^4.0.6"
+    "eslint": "^9.38.0",
+    "vitest": "^4.0.5"
   }
 }
