--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,3 +19,9 @@ CI:
 
     - name : install dependencies
       run : npm ci
+
+    - name : Lint code
+      run : npm run lint
+      
+    - name : run tests
+      run : npm test  
