--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -5,11 +5,8 @@ on :
   pull_request :   
     branches : [ main ]
 jobs:
-  ci:
+  lint:
     runs-on : ubuntu-latest
-    strategy :
-      matrix :
-        node-version : [ '18.x','20.x' ]
     steps :
     - name : checkout code
       uses : actions/checkout@v4
@@ -17,7 +14,7 @@ jobs:
     - name : setup Node.js
       uses : actions/setup-node@v4
       with :  
-        node-version : ${{matrix.node-version}}  
+        node-version : 20 
         cache : 'npm'
 
     - name : install dependencies
@@ -25,7 +22,24 @@ jobs:
 
     - name : Lint code
       run : npm run lint
+
+    tests:
+    runs-on : ubuntu-latest
+    steps :
+    - name : checkout code
+      uses : actions/checkout@v4
+
+    - name : setup Node.js
+      uses : actions/setup-node@v4
+      with :  
+        node-version : 20 
+        cache : 'npm'
+
+    - name : install dependencies
+      run : npm ci
       
     - name : run tests
       run : npm test  
+      
+
       
