--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -5,8 +5,11 @@ on :
   pull_request :   
     branches : [ main ]
 jobs:
-  lint:
+  ci:
     runs-on : ubuntu-latest
+    strategy :
+      matrix :
+        node-version : [ '18.x','20.x' ]
     steps :
     - name : checkout code
       uses : actions/checkout@v4
@@ -14,7 +17,7 @@ jobs:
     - name : setup Node.js
       uses : actions/setup-node@v4
       with :  
-        node-version : 20 
+        node-version : ${{matrix.node-version}}  
         cache : 'npm'
 
     - name : install dependencies
@@ -23,23 +26,6 @@ jobs:
     - name : Lint code
       run : npm run lint
 
-    tests:
-    runs-on : ubuntu-latest
-    steps :
-    - name : checkout code
-      uses : actions/checkout@v4
-
-    - name : setup Node.js
-      uses : actions/setup-node@v4
-      with :  
-        node-version : 20 
-        cache : 'npm'
-
-    - name : install dependencies
-      run : npm ci
-      
     - name : run tests
       run : npm test  
-      
-
       
